# rust-layered-architecture

./: Cargo.toml  README.md  openapi.yml
paging/: Cargo.toml
paging/src/: lib.rs
ramdomstr/: Cargo.toml
ramdomstr/src/: lib.rs
src/: domain.rs  logger.rs  main.rs  registry.rs  routes.rs  usecase.rs
src/domain/: model.rs  repository.rs
src/domain/model/: error.rs  health.rs  result.rs  user.rs  validation.rs
src/domain/service/: user.rs
src/infrastructure/: memory.rs
src/infrastructure/memory/: user.rs
src/routes/: error.rs  health.rs  pagination.rs  user.rs
src/usecase/: error.rs  health_check.rs  user.rs
